--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/JinputTest
 endorsed.classpath=
 excludes=
-file.reference.jinput-2.0.9.jar=C:\\JavaExtension\\jinput-2.0.9.jar
+file.reference.jinput-2.0.9.jar=jinput-2.0.9.jar
 file.reference.RXTXcomm.jar=RXTXcomm.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jinput-2.0.9.jar}:\
-    ${file.reference.RXTXcomm.jar}
+    ${file.reference.RXTXcomm.jar}:\
+    ${file.reference.jinput-2.0.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
